--- a/css/style.css
+++ b/css/style.css
@@ -269,6 +269,17 @@ h6 {
     border-radius: 9px;
     font-size: 1.1rem;
 }
+#contact-box button{
+    padding: 6px 20px;
+    border: 2px solid black;
+    background-color: brown;
+    color: white;
+    margin: 17px 210px;
+    font-size: 1.5rem;
+    border-radius: 10px;
+    cursor: pointer;
+
+}
 
 footer {
     background: black;
@@ -341,10 +352,12 @@ footer {
     gap: 1.5rem;
     align-items: center;
     padding-bottom: 1.5rem;
-    margin: 0% 25rem;
+    margin: 0% 17rem;
 }
-.review .card h5{
+.review .card #revHeading{
     font-size: 1rem;
+    padding: 1rem;
+    margin-left: 24rem;
 }
 .review .noteCard{
     border: 1px solid red;
@@ -353,6 +366,20 @@ footer {
     display: grid;
     gap: 2rem;
     
+}
+.review #notes{
+    display: flex;
+    /* flex-direction: row; */
+    flex-wrap: wrap;
+    width: 95;
+}
+.review #addBtn{
+    margin: 17px 400px;
+}
+.review #addTxt{
+    width: 50rem;
+    height: 10rem;
+    margin-left: 5rem;
 }
 .noteCard .btna{
     font-size: 1rem;
@@ -366,4 +393,16 @@ footer {
 } 
 
 
+@media(max-width:1170px){
+    #contact-box form .formbtn{
+           font-size: 17px;
+           padding: 4px 8px;
+           margin: 16px 100px;
+    }
 
+
+    /* #review{
+        height: 370px;
+        padding: 3px 28px;
+    }  */
+}
